Added BookingComplete, History, FAQ Included some link between activities

--- a/app/src/main/res/layout/activity_alerts.xml
+++ b/app/src/main/res/layout/activity_alerts.xml
@@ -58,7 +58,8 @@
         android:text="Thanks"
         app:layout_constraintEnd_toStartOf="@+id/button11"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:onClick="clickBack2" />
 
     <Button
         android:id="@+id/button11"
