--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -27,8 +27,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView4"
         android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-         />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <TextView
@@ -40,8 +39,7 @@
         app:layout_constraintTop_toBottomOf="@id/textView5"
         android:layout_marginTop="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="30dp"
-         />
+        android:layout_marginLeft="30dp" />
 
     <TextView
         android:id="@+id/textView7"
@@ -124,7 +122,8 @@
         android:text="Confirm Booking"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintTop_toBottomOf="@+id/textView12"
+        android:onClick="clickConfirmBooking" />
 
     <Button
         android:id="@+id/button13"
@@ -136,7 +135,8 @@
         android:text="Cancel Booking"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button12" />
+        app:layout_constraintTop_toBottomOf="@+id/button12"
+        android:onClick="clickCancelBooking" />
 
 
 </android.support.constraint.ConstraintLayout>
