--- a/app/src/main/res/layout/activity_choose_clinic.xml
+++ b/app/src/main/res/layout/activity_choose_clinic.xml
@@ -16,8 +16,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="clickHandler9"
-        />
+        android:onClick="clickHandler9" />
+
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
         android:layout_width="350dp"
@@ -27,7 +27,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/homepage" />
+        app:layout_constraintTop_toBottomOf="@id/homepage"
+        android:onClick="clickHandlerMap" />
 
     <TextView
         android:id="@+id/traveltime"
@@ -37,7 +38,8 @@
         android:text="Estimated Travel Time"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/queuetime"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/totaltime"
@@ -47,7 +49,8 @@
         android:text="Estimated Total Time"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/traveltime"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/queuetime"
@@ -57,7 +60,8 @@
         android:text="Estimated Queue Time"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/mapView"
-        tools:layout_editor_absoluteX="16dp" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="20dp" />
 
     <TextView
         android:id="@+id/time1"
@@ -67,7 +71,8 @@
         android:text="20 min"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/mapView"
-        tools:layout_editor_absoluteX="295dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/time2"
@@ -77,7 +82,8 @@
         android:text="30 min"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/time1"
-        tools:layout_editor_absoluteX="295dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp" />
 
     <TextView
         android:id="@+id/time3"
@@ -87,6 +93,7 @@
         android:text="50 min"
         android:textSize="24sp"
         app:layout_constraintTop_toBottomOf="@+id/time2"
-        tools:layout_editor_absoluteX="295dp" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="20dp" />
 
 </android.support.constraint.ConstraintLayout>
