--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.HomePage">
 
-    <Button
-        android:id="@+id/button3"
+    <TextView
+        android:id="@+id/homeText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -15,10 +15,10 @@
         android:layout_marginTop="8dp"
         android:text="Home"
         android:textAlignment="textStart"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="clickHandler3"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -31,7 +31,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+        app:layout_constraintTop_toBottomOf="@+id/homeText" />
 
     <Button
         android:id="@+id/button4"
@@ -44,7 +44,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        android:onClick="clickHandler4"/>
+        android:onClick="clickHandler4" />
 
     <Button
         android:id="@+id/button5"
@@ -57,7 +57,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button6"
-        android:onClick="clickHandler5"/>
+        android:onClick="clickHandler5" />
 
     <Button
         android:id="@+id/button6"
@@ -70,7 +70,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button4"
-        android:onClick="clickHandler6"/>
+        android:onClick="clickHandler6" />
 
     <Button
         android:id="@+id/button7"
@@ -83,7 +83,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button5"
-        android:onClick="clickHandler7"/>
+        android:onClick="clickHandler7" />
 
     <Button
         android:id="@+id/button8"
@@ -96,5 +96,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button7"
-        android:onClick="clickHandler8"/>
+        android:onClick="clickHandler8" />
 </android.support.constraint.ConstraintLayout>
