--- a/app/src/main/res/layout/activity_alerts.xml
+++ b/app/src/main/res/layout/activity_alerts.xml
@@ -7,47 +7,48 @@
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.Alerts">
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/backButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Home"
+        android:text="@string/back_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="backButton"/>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/alertTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
-        android:text="Alerts"
+        android:text="@string/view_alerts"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintTop_toBottomOf="@+id/backButton" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/alertContent"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="30dp"
-        android:text="The temperature outside is cold. Do not forget to carry your sweater."
+        android:text="@string/alert_content"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/alertTitle" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/thanksButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="15dp"
@@ -55,21 +56,21 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
-        android:text="Thanks"
-        app:layout_constraintEnd_toStartOf="@+id/button11"
+        android:text="@string/thanks_button"
+        app:layout_constraintEnd_toStartOf="@+id/knowMoreButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        android:onClick="clickBack2" />
+        app:layout_constraintTop_toBottomOf="@+id/alertContent"
+        android:onClick="thanksButton" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/knowMoreButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:layout_marginTop="30dp"
-        android:text="Know more ..."
+        android:text="@string/know_more"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/alertContent" />
 
 </android.support.constraint.ConstraintLayout>
