--- a/app/src/main/res/layout/activity_booking_history.xml
+++ b/app/src/main/res/layout/activity_booking_history.xml
@@ -7,23 +7,23 @@
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.BookingHistory">
 
     <Button
-        android:id="@+id/backButton2"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
+        android:text="@string/back_text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:onClick="clickBack" />
+        android:onClick="backButton" />
 
     <TextView
-        android:id="@+id/bookingHistoryName"
+        android:id="@+id/bookingHistoryText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Booking History"
+        android:text="@string/booking_history_text"
         android:textSize="24dp"
-        app:layout_constraintLeft_toRightOf="@id/backButton2"
+        app:layout_constraintLeft_toRightOf="@id/backButton"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp" />
