--- a/app/src/main/res/layout/activity_booking_complete.xml
+++ b/app/src/main/res/layout/activity_booking_complete.xml
@@ -63,6 +63,7 @@
         android:layout_marginRight="50dp"
         android:layout_marginTop="20dp"
         android:text="@string/go_to_my_queue"
-        android:textSize="15dp" />
+        android:textSize="15dp"
+        android:onClick="MyQueue"/>
 
 </android.support.constraint.ConstraintLayout>
