--- a/app/src/main/res/layout/activity_my_queue_detailed.xml
+++ b/app/src/main/res/layout/activity_my_queue_detailed.xml
@@ -28,8 +28,7 @@
         app:layout_constraintLeft_toRightOf="@id/backButton"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="70dp"
-        android:layout_marginStart="70dp"
-        />
+        android:layout_marginStart="70dp" />
 
     <TextView
         android:id="@+id/QueueNumberText"
@@ -41,19 +40,17 @@
         app:layout_constraintTop_toBottomOf="@id/backButton"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="30dp"
-        />
+        android:paddingTop="30dp" />
 
     <TextView
         android:id="@+id/queuenumber1Text"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="250dp"
-        android:paddingTop="30dp"
+        android:padding="30dp"
         android:text="@string/queuenumber1_text"
         android:textAlignment="center"
         android:textSize="80sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/QueueNumberText"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
 
@@ -61,43 +58,41 @@
 
     <TextView
         android:id="@+id/WaitingTimeText"
-        android:layout_width="200dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="148dp"
-        android:paddingTop="30dp"
+        android:padding="10dp"
         android:text="@string/waitingtime_text"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/queuenumber1Text"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
 
         />
+
     <TextView
-        android:id="@+id/Timingext"
+        android:id="@+id/Timingtext"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="70dp"
         android:text="@string/timing_text"
         android:textSize="50sp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/WaitingTimeText"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="20dp"
-        />
+        android:paddingTop="20dp" />
 
     <TextView
         android:id="@+id/Reminder1Text"
-        android:layout_width="200dp"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="@string/reminder1_text"
         android:textSize="24sp"
         android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Timingtext"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:paddingTop="20dp"
-        />
+        android:padding="10dp" />
 
 </android.support.constraint.ConstraintLayout>
