--- a/app/src/main/res/layout/activity_my_queue.xml
+++ b/app/src/main/res/layout/activity_my_queue.xml
@@ -50,8 +50,8 @@
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/QueueText"/>
-    <!--app:srcCompat="@drawable/qrcode"-->
+        app:layout_constraintTop_toBottomOf="@id/QueueText"
+        app:srcCompat="@drawable/qrcode"/>
 
     <TextView
         android:id="@+id/ReminderText"
