--- a/app/src/main/res/layout/activity_my_queue.xml
+++ b/app/src/main/res/layout/activity_my_queue.xml
@@ -6,17 +6,6 @@
     android:layout_height="match_parent"
     tools:context="tomorrow.ntu.edu.sg.hospitalbees.MyQueue">
 
-    <Button
-        android:id="@+id/backButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/back_text"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:onClick="backButton" />
 
     <TextView
         android:id="@+id/MyQueueName"
@@ -25,10 +14,9 @@
         android:text="@string/my_queue_text"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/backButton"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginStart="70dp"
          />
 
     <TextView
@@ -38,7 +26,7 @@
         android:text="@string/queue_text"
         android:textSize="24sp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/backButton"
+        app:layout_constraintTop_toBottomOf="@id/MyQueueName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:paddingTop="40dp" />
@@ -73,7 +61,7 @@
         android:text="@string/queuenumber_text"
         android:textSize="24sp"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@id/backButton"
+        app:layout_constraintTop_toBottomOf="@id/MyQueueName"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:paddingTop="30dp"
